--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Your Title</title>
+  <title>DEVIKA M S</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
@@ -32,7 +32,7 @@
           <div class="card">
             <img class="card-img-top" src="https://via.placeholder.com/200" alt="Card image">
             <div class="card-body">
-              <h4 class="card-title">Mr. MyFOSSLab</h4>
+              <h4 class="card-title">MrS. DEVIKA M S</h4>
               <p class="card-text font-italic">Your Address<br>
                 <i class="fa fa-phone"></i> +91 3339999000<br>
                 <i class="fa fa-envelope "></i> <a href="mailto:youremail@abc.com">youremail@abc.com</a></p>
